--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -4,22 +4,27 @@
     right: 50px;
     background-color: #404040;
     width: 40%;
-    height: 40%;
+    height: 60%;
     max-width: 500px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     display: flex;
     flex-direction: column;
     border: 1px solid whitesmoke;
-    box-shadow: 0px 5px 7px 0px rgba(0,0,0,0.24);
+    box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.24);
 }
 
 .send-mail-header {
-    padding: 15px;
+    padding: 13px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
+    color: gray;
+}
+
+.send-mail-header > h3 {
+    color: whitesmoke;
+    font-size: 13px;
 }
 
 .send-mail-header > h3 {
@@ -28,20 +33,26 @@
 }
 
 .send-mail-send {
-    background-color: #3073ed !important;
+    background-color: #3079ed !important;
     text-transform: capitalize !important;
     margin: 15px !important;
-    color: white !important;
 }
 
 .send-mail-close {
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 .send-mail > form {
     display: flex;
     flex: 1;
     flex-direction: column;
+}
+
+.send-mail-error {
+    background-color: white;
+    color: red;
+    text-align: right;
+    margin: 0;
 }
 
 .send-mail > form > input {
