--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -23,3 +23,9 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 400px) {
+    .sidebar {
+        display: none;
+    }
+}
