--- a/src/styles/EmailRow.css
+++ b/src/styles/EmailRow.css
@@ -2,6 +2,7 @@
 .email-row {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 50px;
     border-bottom: 1px solid whitesmoke;
     cursor: pointer;
@@ -59,4 +60,15 @@
     font-weight: 400;
     color: gray;
     margin-left: 8px;
+}
+
+.email-container {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.MuiToggleButton-root {
+    border: none !important;
+    background-color: transparent !important;
 }
