--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -19,6 +19,35 @@
     box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.75);
 }
 
+.sidebar-option {
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    width: 100% !important;
+    height: 6.5% !important;
+    border-top-right-radius: 20px !important;
+    border-bottom-right-radius: 20px !important;
+    display: flex !important;
+    justify-content: flex-start !important;
+    color: #7f7f7f !important;
+    text-transform: capitalize !important;
+    margin-top: 2px !important;
+}
+
+.sidebar-option > .MuiButton-startIcon {
+    padding: 5px !important;
+    margin-left: 4px;
+}
+
+.sidebar-option > .MuiSvgIcon {
+    padding-right: 500px !important;
+}
+
+.sidebar-option:hover {
+    background-color: #fcecec !important;
+    color: #c04b37 !important;
+    font-weight: 800 !important;
+}
+
 .sidebar-footer {
     display: flex;
     justify-content: center;
